qa/apps/zeppelin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notebook
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: notebook-basic-auth
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  tls:
    - hosts:
      - notebook.qa.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: notebook.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: zeppelin
              port:
                number: 8080
